--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/storage": "^0.11.2",
+    "@google-cloud/storage": "^6.9.5",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^9.20.0",
+    "firebase-admin": "^11.7.0",
+    "formidable": "^2.1.1",
     "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.5.2",
+    "sortablejs": "^1.15.0",
     "tailwindcss": "3.3.1"
   }
 }
