--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "@firebase/storage": "^0.11.2",
     "@google-cloud/storage": "^6.9.5",
-    "@next-auth/firebase-adapter": "^2.0.1",
+    "@next-auth/firebase-adapter": "^0.0.2-canary.207",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "firebase": "^9.20.0",
-    "firebase-admin": "^11.7.0",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "formidable": "^2.1.1",
-    "next": "13.3.1",
-    "next-auth": "^4.22.1",
+    "next": "^13.5.6",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
