--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@firebase/storage": "^0.11.2",
     "@google-cloud/storage": "^6.9.5",
     "@next-auth/firebase-adapter": "^0.0.2-canary.207",
+    "@stripe/stripe-js": "^3.5.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.39.0",
